# coinlibio-rs

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: coinlib.rs  lib.rs
tests/: integration_test.rs
